Add Java version validation and update documentation to reflect SecurityManager requirements