@@ -2,7 +2,7 @@
 
 ## Prerequisites
 
-* Java 17+ JDK (a compiler is needed)
+* Java 17-23 JDK (a compiler is needed). Java 24+ is not supported since the SecurityManager was removed (JEP 486). If using Java 18-23, the JVM flag `-Djava.security.manager=allow` must be set.
 * Maven
 * MySQL 8.x (optional — H2 in-memory is used by default; MySQL is recommended for persistent data)
 
